<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payments"
    tools:layout_editor_absoluteX="15dp"
    tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/title4"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:text="@string/title4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        android:contentDescription="@string/card">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/hostel_allocation"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/book2"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu_book"
            android:contentDescription="@string/bookImage"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        android:contentDescription="@string/card">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/textbooks"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/book3"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu_book"
            android:contentDescription="@string/bookImage"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        android:contentDescription="@string/card">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/club_society"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/book4"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu_book"
            android:contentDescription="@string/bookImage"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card6"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        android:contentDescription="@string/card">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/extra"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/book6"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bookImage"
            app:srcCompat="@drawable/menu_book" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        android:contentDescription="@string/card">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/school_transfer"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/book5"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu_book"
            android:contentDescription="@string/bookImage"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        android:contentDescription="@string/card">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:text="@string/tuition"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/book1"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/menu_book"
            android:contentDescription="@string/bookImage"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>